--- a/404.html
+++ b/404.html
@@ -44,8 +44,12 @@
                         <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                 </nav>
-                <div class="language">
-                    <div class="language__active">RU</div>
+                <div class="language" data-dropdown>
+                    <div class="language__active" data-dropdown-active>RU</div>
+                    <ul class="language__list" data-dropdown-list>
+                        <li data-dropdown-id="ru" class="active">RU</li>
+                        <li data-dropdown-id="eng">ENG</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -92,6 +96,10 @@
             <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="src/dropdown.js"></script>
 </body>
 
 </html>
