--- a/contacts.html
+++ b/contacts.html
@@ -44,8 +44,12 @@
                         <li><a href="contacts.html" class="active"><span>Контакты</span></a></li>
                     </ul>
                 </nav>
-                <div class="language">
-                    <div class="language__active">RU</div>
+                <div class="language" data-dropdown>
+                    <div class="language__active" data-dropdown-active>RU</div>
+                    <ul class="language__list" data-dropdown-list>
+                        <li data-dropdown-id="ru" class="active">RU</li>
+                        <li data-dropdown-id="eng">ENG</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -127,7 +131,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlBb2IIdB1ipotVn5R7TMYY2llHXs_-yI&callback=initMap" async defer></script>
-
+    <script src="src/dropdown.js"></script>
     <script>
         var map;
         function initMap() {
