--- a/products.html
+++ b/products.html
@@ -44,8 +44,12 @@
                         <li><a href="contacts.html"><span>Контакты</span></a></li>
                     </ul>
                 </nav>
-                <div class="language">
-                    <div class="language__active">RU</div>
+                <div class="language" data-dropdown>
+                    <div class="language__active" data-dropdown-active>RU</div>
+                    <ul class="language__list" data-dropdown-list>
+                        <li data-dropdown-id="ru" class="active">RU</li>
+                        <li data-dropdown-id="eng">ENG</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -74,38 +78,44 @@
             <div class="tm-list">
                 <div class="tm-list__item"><img src="img/own1.png" alt=""></div>
                 <div class="tm-list__item">
+                    <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>   ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own2.png" alt=""></div>
                 <div class="tm-list__item">
+                     <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item">
+                     <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own3.png" alt=""></div>
                 <div class="tm-list__item">
+                     <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own4.png" alt=""></div>
                 <div class="tm-list__item"><img src="img/own5.png" alt=""></div>
                 <div class="tm-list__item">
+                     <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own6.png" alt=""></div>
                 <div class="tm-list__item">
+                     <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
-                        <img src="img/aznauri-logosmall.png" alt=""> <a href="products_import.html">ТМ АЗНАУРИ</a>
+                        <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <a href="products_import.html"><button class="btn btn-subscribe">Импортные ТМ</button></a>
@@ -146,6 +156,10 @@
             <div class="copyright">2019 © GBT</div>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="src/dropdown.js"></script>
 </body>
 
 </html>
