--- a/distribution_export.html
+++ b/distribution_export.html
@@ -1185,19 +1185,33 @@
 
                     <g>
                         <path id="usa-path" class="path" d="M1139,260 Q950,-50 425,320"
-                        fill="none" stroke="#000" stroke-width="2px" />
+                        fill="none" stroke="#000" />
 
                         <path id="scotland-path" class="path" d="M1139,260 Q1050,50 955,208"
-                        fill="none" stroke="#000" stroke-width="2px" />
+                        fill="none" stroke="#000" />
 
                         <path id="england-path" class="path" d="M1139,260 Q1110, 60 965,228"
-                        fill="none" stroke="#000" stroke-width="2px" />
+                        fill="none" stroke="#000" />
 
                         <path id="nigeria-path" class="path" d="M1139,260 Q950,300 1020,505"
-                        fill="none" stroke="#000" stroke-width="2px" />
+                        fill="none" stroke="#000" />
 
                         <path id="china-path" class="path" d="M1139,260 Q1350,50 1490,345"
-                        fill="none" stroke="#000" stroke-width="2px" />
+                        fill="none" stroke="#000" />
+
+                        
+                        <path class="path" d="M1139,260 Q1100,230 1080,245"
+                        fill="none" stroke="#000" />
+
+                        <path class="path" d="M1139,260 Q1100,248 1070,260"
+                        fill="none" stroke="#000" />
+
+                        
+                        <path class="path" d="M1139,260 Q1150,210 1088,218"
+                        fill="none" stroke="#000" />
+
+                        <path class="path" d="M1139,260 Q1150,200 1095,207"
+                        fill="none" stroke="#000" />
                     </g>
 
                     <!-- <defs>
@@ -1212,6 +1226,11 @@
                         <circle r="3" cx="955" cy="208" fill="#d9252d"/>
                         <circle r="3" cx="965" cy="228" fill="#d9252d"/>
                         <circle r="3" cx="1490" cy="345" fill="#d9252d"/>
+
+                        <circle r="3" cx="1080" cy="245" fill="#d9252d"/>
+                        <circle r="3" cx="1070" cy="260" fill="#d9252d"/>
+                        <circle r="3" cx="1088" cy="218" fill="#d9252d"/>
+                        <circle r="3" cx="1095" cy="207" fill="#d9252d"/>
                     </g>
 
                     <g class="plane-circle">
