--- a/contacts.html
+++ b/contacts.html
@@ -84,7 +84,7 @@
                     <button class="btn btn-contacts">Отправить нам</button>
                 </form>
                 <div class="map" id="map"></div>
-                <ul>
+                <ul class="contacts-info">
                     <li><img src="img/placeholder.svg" alt=""> Центральный офис: Укриана, г. Киев, ул.
                         Машиностроительная, 44а. </li>
                     <li><img src="img/earth-globe.svg" alt=""> www.gbt.com.ua</li>
