--- a/about.html
+++ b/about.html
@@ -64,8 +64,13 @@
                     <a class="breadcrumbs__item" href="index.html"><span>Главная</span></a>
                     <span class="breadcrumbs__item">О компании</span>
                 </div>
-                <div class="top-panel__title">О компании
-                    <img src="img/handshake.png" alt="">
+                <div class="top-panel__title"> 
+                    <span>О компании</span>
+                    <div class="top-panel__title--img">
+                        <div class=""></div>
+                        <div class=""></div>
+                        <div class=""></div>
+                    </div>
                 </div>
                 <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
