--- a/contacts.html
+++ b/contacts.html
@@ -63,8 +63,15 @@
                     <a class="breadcrumbs__item" href="index.html"><span>Главная</span></a>
                     <span class="breadcrumbs__item">Контакты</span>
                 </div>
-                <div class="top-panel__title">Контакты
-                    <img src="img/phone-call.png" alt="">
+                <div class="top-panel__title"> 
+                    <span>Контакты</span>
+                    <!-- <img src="img/phone-call.png" alt=""> -->
+
+                    <div class="top-panel__title--img">
+                        <div class=""></div>
+                        <div class=""></div>
+                        <div class=""></div>
+                    </div>
                 </div>
                 <div class="top-panel__descr">С другой стороны рамки и место обучения кадров влечет за собой процесс
                     внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Задача
