--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         <div class="header-image"></div>
         <div class="header-description">
             <div class="container">
-                <div class="header-description__subtitle"><img src="img/GBT_logo--.svg" alt=""> «GBT» - Power of
-                    Evolution
+                <div class="header-description__subtitle">
+                    <img src="img/GBT_logo--.svg" alt=""> 
+                    <span>«GBT» - Power of
+                            Evolution</span>
                 </div>
                 <div class="header-description__title">ДИСТРИБУЦИЯ
                     <span> АЛКОГОЛЬНЫХ НАПИТКОВ</span>
