--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
                     <div class="language__active" data-dropdown-active>RU</div>
                     <ul class="language__list" data-dropdown-list>
                         <li data-dropdown-id="ru" class="active">RU</li>
+                        <li data-dropdown-id="ukr">UKR</li>
                         <li data-dropdown-id="eng">ENG</li>
                     </ul>
                 </div>
