--- a/products.html
+++ b/products.html
@@ -118,8 +118,9 @@
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <a href="products_import.html"><button class="btn btn-subscribe">Импортные ТМ</button></a>
+               
             </div>
+            <a href="products_import.html" class="products__link"><button class="btn btn-subscribe">Импортные ТМ</button></a>
         
         </div>
 
