--- a/about.html
+++ b/about.html
@@ -161,12 +161,12 @@
             <div class="container">
                 <div class="title title-values">Ценности</div>
                 <div class="values__list" data-animate>
-                    <div class="values__list-item"><img src="img/worth1.png" alt=""></div>
+                    <div class="values__list-item"><img src="img/worth1.jpg" alt=""></div>
                     <div class="values__list-item">
                         <div class="values__list-item--number">01</div>
                         <div class="values__list-item--text">Проактивность</div>
                     </div>
-                    <div class="values__list-item"><img src="img/worth2.png" alt=""></div>
+                    <div class="values__list-item"><img src="img/worth2.jpg" alt=""></div>
                     <div class="values__list-item">
                         <div class="values__list-item--number">02</div>
                         <div class="values__list-item--text">Динамичность</div>
@@ -175,18 +175,18 @@
                         <div class="values__list-item--number">03</div>
                         <div class="values__list-item--text">Амбициозность</div>
                     </div>
-                    <div class="values__list-item"><img src="img/worth3.png" alt=""></div>
+                    <div class="values__list-item"><img src="img/worth3.jpg" alt=""></div>
                     <div class="values__list-item">
                         <div class="values__list-item--number">04</div>
                         <div class="values__list-item--text">Системность</div>
                     </div>
-                    <div class="values__list-item"><img src="img/worth4.png" alt=""></div>
-                    <div class="values__list-item"><img src="img/worth5.png" alt=""></div>
+                    <div class="values__list-item"><img src="img/worth4.jpg" alt=""></div>
+                    <div class="values__list-item"><img src="img/worth5.jpg" alt=""></div>
                     <div class="values__list-item">
                         <div class="values__list-item--number">05</div>
                         <div class="values__list-item--text">Дружба</div>
                     </div>
-                    <div class="values__list-item"><img src="img/worth6.png" alt=""></div>
+                    <div class="values__list-item"><img src="img/worth6.jpg" alt=""></div>
                     <div class="values__list-item">
                         <div class="values__list-item--number">06</div>
                         <div class="values__list-item--text">Открытость</div>
