--- a/products.html
+++ b/products.html
@@ -76,14 +76,14 @@
         <div class="container">
             <div class="title">Собственные ТМ</div>
             <div class="tm-list">
-                <div class="tm-list__item"><img src="img/own1.png" alt=""></div>
+                <div class="tm-list__item"><img src="img/own1.jpg" alt=""></div>
                 <div class="tm-list__item">
                     <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>   ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own2.png" alt=""></div>
+                <div class="tm-list__item"><img src="img/own2.jpg" alt=""></div>
                 <div class="tm-list__item">
                      <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
@@ -96,22 +96,22 @@
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own3.png" alt=""></div>
+                <div class="tm-list__item"><img src="img/own3.jpg" alt=""></div>
                 <div class="tm-list__item">
                      <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own4.png" alt=""></div>
-                <div class="tm-list__item"><img src="img/own5.png" alt=""></div>
+                <div class="tm-list__item"><img src="img/own4.jpg" alt=""></div>
+                <div class="tm-list__item"><img src="img/own5.jpg" alt=""></div>
                 <div class="tm-list__item">
                      <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
-                <div class="tm-list__item"><img src="img/own6.png" alt=""></div>
+                <div class="tm-list__item"><img src="img/own6.jpg" alt=""></div>
                 <div class="tm-list__item">
                      <a href="products_import.html"></a>
                     <div class="tm-list__item--text">
