--- a/products_import.html
+++ b/products_import.html
@@ -76,7 +76,7 @@
         <div class="product">
             <div class="container">
                 <div class="product-image">
-                    <img src="img/aznauribotle.png" alt="">
+                    <img src="img/aznauribotle.jpg" alt="">
                 </div>
                 <div class="product-info">
                     <div class="product-info__title">ТМ Aznauri</div>
@@ -95,7 +95,7 @@
                     <div class="slick__title"><span>Ассортимент</span></div>
                     <div class="slider">
                         <div class="slick__item">
-                            <img class="slick__item--img" src="img/bottlesmall.png" alt="">
+                            <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                             <div class="slick__item--info">
                                 <ul>
                                     <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <div class="slick__item">
-                            <img class="slick__item--img" src="img/bottlesmall.png" alt="">
+                            <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                             <div class="slick__item--info">
                                 <ul>
                                     <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                         <div class="slick__item">
-                            <img class="slick__item--img" src="img/bottlesmall.png" alt="">
+                            <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                             <div class="slick__item--info">
                                 <ul>
                                     <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="slick__item">
-                                <img class="slick__item--img" src="img/bottlesmall.png" alt="">
+                                <img class="slick__item--img" src="img/bottlesmall.jpg" alt="">
                                 <div class="slick__item--info">
                                     <ul>
                                         <li><img src="img/sugar.svg" alt=""><span class="substance">Сахар:</span><span class="weight">0,8g</span></li>
