--- a/distribution.html
+++ b/distribution.html
@@ -88,11 +88,10 @@
                 </div>
 
                 <ul>
-                    <li> <b> 80 дистрибьюторов по всей территории
-                            Украины</b></li>
+                    <li><b>80 дистрибьюторов по всей территории Украины</b></li>
                     <li> Более <b> 2 000 Торговых представителей</b></li>
                     <li>
-                        Более  <b> 35 000 активных торговых точек. </b></li>
+                        Более  <b> 35 000 активных торговых точек.</b></li>
                 </ul>
 
             </div>
