--- a/contacts.html
+++ b/contacts.html
@@ -52,6 +52,32 @@
                         <li data-dropdown-id="eng">ENG</li>
                     </ul>
                 </div>
+                <div class="burger" class="opened" data-menu-btn>
+                    <span></span>
+                </div>
+                <div class="dropdown-menu" class="opened" data-menu>
+            
+                    <nav>
+                        <ul>
+                            <li><a href="index.html"><span>Главная</span></a></li>
+                            <li><a href="about.html"><span>О компании</span></a></li>
+                            <li>
+                                <a href="distribution.html">
+                                    <span>Дистрибуция</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="products.html"><span>Продукция</span></a>
+                            </li>
+                            <li><a href="career.html"><span>Карьера</span></a></li>
+                            <li><a href="contacts.html" class="active"><span>Контакты</span></a></li>
+                        </ul>
+                    </nav>
+                    <div class="socials">
+                        <a href="" class="socials__item"><img src="img/facebook-w.svg" alt=""></a>
+                        <a href="" class="socials__item"><img src="img/instagram-w.svg" alt=""></a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -137,6 +163,7 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlBb2IIdB1ipotVn5R7TMYY2llHXs_-yI&callback=initMap" async defer></script>
     <script src="src/dropdown.js"></script>
+    <script src="src/menu.js"></script>
     <script>
         var map;
         function initMap() {
