--- a/career.html
+++ b/career.html
@@ -52,6 +52,31 @@
                         <li data-dropdown-id="eng">ENG</li>
                     </ul>
                 </div>
+                <div class="burger" class="opened" data-menu-btn>
+                    <span></span>
+                </div>
+                <div class="dropdown-menu" class="opened" data-menu>
+                    <nav>
+                        <ul>
+                            <li><a href="index.html"><span>Главная</span></a></li>
+                            <li><a href="about.html"><span>О компании</span></a></li>
+                            <li>
+                                <a href="distribution.html">
+                                    <span>Дистрибуция</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="products.html"><span>Продукция</span></a>
+                            </li>
+                            <li><a href="career.html" class="active"><span>Карьера</span></a></li>
+                            <li><a href="contacts.html"><span>Контакты</span></a></li>
+                        </ul>
+                    </nav>
+                    <div class="socials">
+                        <a href="" class="socials__item"><img src="img/facebook-w.svg" alt=""></a>
+                        <a href="" class="socials__item"><img src="img/instagram-w.svg" alt=""></a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -230,6 +255,7 @@
     <script src="src/modal.js"></script>
     <script src="src/animate.js"></script>
     <script src="src/dropdown.js"></script>
+    <script src="src/menu.js"></script>
     <script>
         $(".m-scrollbar").mCustomScrollbar();
     </script>
