--- a/distribution_export.html
+++ b/distribution_export.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="map">
-            <div class="map__image">
+            <div class="map__image map__image--export">
      
             <svg version="1.1" id="map-svg" viewBox="350 0 1300 1000" >
                <style type="text/css">
