--- a/distribution_export.html
+++ b/distribution_export.html
@@ -1249,9 +1249,12 @@
                     </g>
 
                     <g class="plane-circle">
-                        <circle id="circle-usa" r="11" cx="0" cy="0" fill="url(#image)"/>
-                        <circle id="circle-china" r="11" cx="0" cy="0" fill="url(#image)"/>
-                        <circle id="circle-nigeria" r="11" cx="0" cy="0" fill="url(#image)"/>
+                        <!-- <circle id="circle-usa" r="11" cx="0" cy="0" fill="url(#image)"/> -->
+                        <!-- <circle id="circle-china" r="11" cx="0" cy="0" fill="url(#image)"/> -->
+                        <!-- <circle id="circle-nigeria" r="11" cx="0" cy="0" fill="url(#image)"/> -->
+                        <image id="circle-usa" xlink:href="img/air-transport.png" x="0" y="-9" height="19" width="19" ></image>   
+                        <image id="circle-china" xlink:href="img/air-transport.png" x="0" y="-9" height="19" width="19" ></image>  
+                        <image id="circle-nigeria" xlink:href="img/air-transport.png" x="0" y="-9" height="19" width="19" ></image>
                     </g>
 
                     <animateMotion 
