--- a/contacts.html
+++ b/contacts.html
@@ -119,7 +119,7 @@
                         Машиностроительная, 44а. </li>
                     <li><img src="img/earth-globe.svg" alt=""> www.gbt.com.ua</li>
                     <li><img src="img/call-answer.svg" alt=""> Департамент Продаж, тел. <span class="phone-number">
-                            +38 067***-**-**</span></li>
+                            +38 067 <span>(показать номер)</span></li>
                 </ul>
             </div>
         </div>
