--- a/products.html
+++ b/products.html
@@ -103,27 +103,27 @@
             <div class="tm-list">
                 <div class="tm-list__item"><img src="img/own1.jpg" alt=""></div>
                 <div class="tm-list__item">
-                    <a href="products_import.html"></a>
+                    <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>   ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own2.jpg" alt=""></div>
                 <div class="tm-list__item">
-                     <a href="products_import.html"></a>
+                     <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item">
-                     <a href="products_import.html"></a>
+                     <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own3.jpg" alt=""></div>
                 <div class="tm-list__item">
-                     <a href="products_import.html"></a>
+                     <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
@@ -131,14 +131,14 @@
                 <div class="tm-list__item"><img src="img/own4.jpg" alt=""></div>
                 <div class="tm-list__item"><img src="img/own5.jpg" alt=""></div>
                 <div class="tm-list__item">
-                     <a href="products_import.html"></a>
+                     <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
                 </div>
                 <div class="tm-list__item"><img src="img/own6.jpg" alt=""></div>
                 <div class="tm-list__item">
-                     <a href="products_import.html"></a>
+                     <a href="products_details.html"></a>
                     <div class="tm-list__item--text">
                         <img src="img/aznauri-logosmall.png" alt=""> <span>ТМ АЗНАУРИ</span>
                     </div>
